some text cleaning

--- a/translations/uk/hints/freeman_lex.html
+++ b/translations/uk/hints/freeman_lex.html
@@ -1,12 +1,12 @@
 <body data-author="freeman_lex">
     <div class="question-answer">
         <div class="question">
-            На жаль, я не можу самостійно розвязати цю місію, ож підкинь мені ідейку у вірному напрямку!
+            На жаль, я не можу самостійно розвязати цю місію, тож підкинь мені ідейку у вірному напрямку!
         </div>
         <div class="answer">
             <p>Дивись, ідея, яку я пропоную тобі для зрозумілого і поетапного розв'язання місії, наступна.
-            Перш за все, тобі потрібно створити змінні для збереження твої значень різниці між числами і числа на відстані цієї різниці.
-            Тоід, проходячи кожне число в сеті, ти маєш розраховувати абсолютну різницю (відстань) між цим числом і вхідним, яке передається параметром функції.
+            Перш за все, тобі потрібно створити змінні для збереження твоїх значень різниці між числами і числа на відстані цієї різниці.
+            Тоді, проходячи кожне число в сеті, ти маєш розраховувати абсолютну різницю (відстань) між цим числом і вхідним, яке передається параметром функції.
             Якщо ця різниця менша за ту, що зберігається у відповідній змінній - онови значення змінних для різниці і числа на відстані цієї різниці.
             Якщо різниця та ж сама, перевір чи число з сету менше за збережене в змінній. Якщо так - онови значення змінної
             Ну і нарешті, після перевірки всього сету, поверни значення змінної числа із мінімальною відстанню.
@@ -32,14 +32,14 @@
 def nearest_value(values: set, one: int) -> int:
 
     min_dist, closest_num  = None, None # декларуємо початкову відстань і число на ній
-    # використай цикл for loop для проходження через сет:
+    # використай цикл for для проходження через сет:
         dist = # використай abs() для розрахунку відстані між поточним
                # значенням з сету і тим, що передане в параметрах функції
         if min_dist == None or min_dist > dist: # перевірка початкового значення на існування
                                   # і порівняння його із вище розрахованим
             # онови значення змінних min_dist і closest_num
         elif min_dist == dist: # якщо відстань така ж, як збережена
-            closest_num = ... # використай min(), що присвоїти їй значення меншого числа
+            closest_num = ... # використай min(), щоб присвоїти їй значення меншого числа
 
     return closest_num
         </pre>    
